--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 body{
 	width: 100vw;
 	height: 100vh;
@@ -282,9 +281,17 @@ p, h1{
       margin: 30px auto;
       margin-top: 40px;
   }
+video::-webkit-full-page-media {
+	width: 100% !important;
+}
 
+html body video{
+	width: 100% !important;
+}
 
-
+iframe html body video{
+	width: 100% !important;
+}
 .modal-body {
 	overflow: hidden;
   position:relative;
