--- a/Fabrication.css
+++ b/Fabrication.css
@@ -1,5 +1,5 @@
 body{
-	margin-top: 100px;
+	margin-top: 70px;
 	width: 100vw;
 	height: 100vh;
 	overflow-x: hidden;
@@ -57,4 +57,7 @@ nav{
 	width: 37px;
 	height: 9.75%;
 	transform: translate(-105px) skewX(-28deg);
+}
+.fabricationBody{
+	padding: 30px;
 }
