--- a/Aqua.css
+++ b/Aqua.css
@@ -10,7 +10,8 @@ body{
 	position: relative;
 	color: orange;
 	background: #e94f2b;
-	width: 50%;
+	/*width: 50%;*/
+	width: 3.65%;
 	height: 100%;
 	transform: translate(-105px) skewX(-30deg);
 }
@@ -22,6 +23,7 @@ body{
 #orange-shape img{
 	width: 45px;
 	height: 60px;
+	margin-left: 0.5in;
 }
 
 nav{
@@ -57,4 +59,19 @@ nav{
 	width: 37px;
 	height: 9.75%;
 	transform: translate(-105px) skewX(-28deg);
+}
+
+.aquaDiv{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.aquaDiv img{
+	max-height: 400px;
+	max-width: 500px;
+	margin: 5px;
+	width: 300px;
+	max-width: 100%;
+	height: 400px;
 }
