ui changes- Navbar brand and shapes changed

--- a/index.css
+++ b/index.css
@@ -6,7 +6,10 @@ body{
 	color: #44457b;
 }
 #orange-shape{
+	position: inline-block;
 	position: relative;
+	padding: 15px;
+	float: left;
 	color: orange;
 	background: #e94f2b;
 	/*width: 50%;*/
@@ -15,14 +18,16 @@ body{
 	transform: translate(-105px) skewX(-30deg);
 }
 
-#orange-shape a{
-	transform: skewX(30deg);
+.container a{
+	margin-left: 0in;
+	/*transform: skewX(30deg);*/
+
 }
 
-#orange-shape img{
+.container img{
 	width: 45px;
 	height: 60px;
-	margin-left: 0.5in;
+	/*margin-left: 0.1in;*/
 }
 
 nav{
@@ -54,6 +59,7 @@ nav{
 	padding: 15px;
 	left: 18.8%;
 	position: relative;
+	float: right;
 	background: #44457b;
 	width: 37px;
 	height: 9.75%;
