--- a/Aqua.css
+++ b/Aqua.css
@@ -5,6 +5,7 @@ body{
 	overflow-x: hidden;
 	overflow-y: scroll;
 	color: #44457b;
+	padding-left: 16px;: 
 }
 #orange-shape{
 	position: relative;
@@ -61,6 +62,10 @@ nav{
 	transform: translate(-105px) skewX(-28deg);
 }
 
+.aquaDiv div{
+	border: .5px solid #44457b;
+}
+
 .aquaDiv{
 	display: flex;
 	flex-direction: row;
@@ -75,3 +80,4 @@ nav{
 	max-width: 100%;
 	height: 400px;
 }
+
