--- a/Aqua.css
+++ b/Aqua.css
@@ -102,3 +102,15 @@ nav{
 	height: 400px;
 }
 
+
+@media only screen   
+and (min-width: 1030px)   
+and (max-width: 1366px)  {
+	#orange-shape{
+		right: 36px;
+	}
+	#purple-shape{
+		left: 242px;
+	}
+}
+
