--- a/Fabrication.css
+++ b/Fabrication.css
@@ -66,3 +66,15 @@ nav{
 .fabricationBody{
 	padding: 30px;
 }
+
+
+@media only screen   
+and (min-width: 1030px)   
+and (max-width: 1366px)  {
+	#orange-shape{
+		right: 36px;
+	}
+	#purple-shape{
+		left: 242px;
+	}
+}
