--- a/contact us.css
+++ b/contact us.css
@@ -118,3 +118,14 @@ nav{
 	margin-left: 7%;
 	width: 80%;
 }
+
+@media only screen   
+and (min-width: 1030px)   
+and (max-width: 1366px)  {
+	#orange-shape{
+		right: 36px;
+	}
+	#purple-shape{
+		left: 242px;
+	}
+}
