--- a/contact us.css
+++ b/contact us.css
@@ -129,3 +129,31 @@ and (max-width: 1366px)  {
 		left: 242px;
 	}
 }
+
+@media only screen   
+and (min-device-width : 768px)   
+and (max-device-width : 1024px) {
+	#orange-shape{
+		width: 4.65%;
+		right: -34px;
+	}
+	#purple-shape{
+		width: 45px;
+		left: 179px;
+	}
+
+	.route1 div:nth-child(2) div img{
+		height: 100% !important;
+	}
+
+	.route2 div img{
+		height: 100% !important;
+	}
+
+	.route3 div:nth-child(2){
+		margin-top: 7px !important;
+	}
+	.route3 div:nth-child(2) img{
+		height: 93% !important;
+		margin-top: 0 !important;
+	}
