ui changes- Completed responsiveness for 1366 devices

--- a/index.css
+++ b/index.css
@@ -352,6 +352,14 @@ and (max-device-width : 1605px) {
 	.route3 div:nth-child(2){
 		margin-top: 0 !important;
 	}
+	.route3 div:nth-child(2) img{
+		height: 93% !important;
+		margin-top: 0 !important;
+	}
+	.route3 div:nth-child(2) img{
+		height: 92% !important;
+		margin-top: 0 !important;
+	}
 }
 
 @media only screen   
@@ -368,6 +376,8 @@ and (max-width: 1366px)  {
 	.route3 div:nth-child(2){
 		margin-top: 0 !important;
 	}
+
+
 }
 
 @media only screen   
