--- a/Fabrication.css
+++ b/Fabrication.css
@@ -67,6 +67,29 @@ nav{
 	padding: 30px;
 }
 
+@media only screen   
+and (min-width: 1606px)  
+and (max-width: 1920px)  {
+/*and (max-width: 1605px)  {*/
+	#orange-shape{
+		right: 3.35in;
+	}
+	#purple-shape{
+		left: 5.5in;
+	}
+}
+
+@media only screen   
+and (min-device-width : 1367px)   
+and (max-device-width : 1605px) {
+	#orange-shape{
+		right: 1.7in;
+	}
+	#purple-shape{
+		left: 3.85in;
+	}
+}
+
 
 @media only screen   
 and (min-width: 1281px)   
